--- a/runmerunner/pom.xml
+++ b/runmerunner/pom.xml
@@ -22,6 +22,7 @@
       <version>4.12</version>
       <scope>test</scope>
     </dependency>
+       
     
 	<dependency>
 	    <groupId>org.apache.maven.plugins</groupId>
@@ -29,10 +30,34 @@
 	    <version>3.8.0</version>
 	</dependency>
 	
+	<!-- https://mvnrepository.com/artifact/commons-cli/commons-cli -->
+	<dependency>
+	    <groupId>commons-cli</groupId>
+	    <artifactId>commons-cli</artifactId>
+	    <version>1.4</version>
+	</dependency>
+	
+	
   </dependencies>
 
     <build>
 		<plugins>
+		
+			<plugin>
+		      <artifactId>maven-assembly-plugin</artifactId>
+		      <configuration>
+		        <archive>
+		          <manifest>
+		            <mainClass>de.htw.ai.kbe.runmerunner.Runner</mainClass>
+		          </manifest>
+		        </archive>
+		        <descriptorRefs>
+		          <descriptorRef>jar-with-dependencies</descriptorRef>
+		        </descriptorRefs>
+		      </configuration>
+		    </plugin>
+
+		
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -42,7 +67,24 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
+			
+			<plugin>
+		    <groupId>org.apache.maven.plugins</groupId>
+		    <artifactId>maven-jar-plugin</artifactId>
+			    <configuration>
+			        <archive>
+			            <manifest>
+			                <addClasspath>true</addClasspath>
+			                <classpathPrefix>libs/</classpathPrefix>
+			                <mainClass>
+			                    de.htw.ai.kbe.runmerunner.Runner
+			                </mainClass>
+			            </manifest>
+			        </archive>
+			    </configuration>
+			</plugin>
 		</plugins>
+			
 	</build>
 
   
