--- a/songsServlet/pom.xml
+++ b/songsServlet/pom.xml
@@ -61,6 +61,21 @@
 	</dependencies>
 	<build>
 		<plugins>
+		
+		 <plugin>
+            <groupId>org.apache.tomcat.maven</groupId>
+            <artifactId>tomcat7-maven-plugin</artifactId>
+            <version>2.2</version>
+            <configuration>
+                <url>http://127.0.0.1:8080/manager/text</url>
+                <path>/songsServlet</path>
+                <update>true</update>
+                <username>tomcat</username>
+                <password>tomcat</password>
+            </configuration>
+        </plugin>
+		
+		
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
