--- a/songsServlet/src/main/webapp/WEB-INF/web.xml
+++ b/songsServlet/src/main/webapp/WEB-INF/web.xml
@@ -7,15 +7,18 @@
   
   
      <servlet>
-        <servlet-name>Songs Servlet</servlet-name>
+        <servlet-name>songsServlet</servlet-name>
         <servlet-class>de.htw.ai.kbe.songsServlet.App</servlet-class>
                 
         <init-param>   
             <param-name>songsxml</param-name>
-            <param-value>songs-uri:C://Temp/</param-value>
+            <param-value>songs-uri:./</param-value>
         </init-param>
     </servlet>
   
-  
+     <servlet-mapping>
+        <servlet-name>songsServlet</servlet-name>
+        <url-pattern>/songs</url-pattern>
+    </servlet-mapping>
   
 </web-app>
