--- a/songsServlet/pom.xml
+++ b/songsServlet/pom.xml
@@ -13,6 +13,12 @@
 	</properties>
 
 	<dependencies>
+	
+		<dependency>
+			<groupId>org.skyscreamer</groupId>
+			<artifactId>jsonassert</artifactId>
+			<version>1.5.0</version>
+		</dependency>
 		
 		<dependency>
             <groupId>junit</groupId>
