--- a/songsServlet/pom.xml
+++ b/songsServlet/pom.xml
@@ -79,6 +79,11 @@
 			<version>2.9.2</version>
 		</dependency>
 		<dependency>
+  			<groupId>com.fasterxml.jackson.dataformat</groupId>
+ 			<artifactId>jackson-dataformat-xml</artifactId>
+  			<version>2.9.0</version>
+		</dependency>
+		<dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
             <version>5.0.1.RELEASE</version>
