--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,17 @@
 .classpath
 .project
 .settings/
+.metadata
+bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.settings/
+.loadpath
+.recommenders
  
 # Intellij
 .idea/
