--- a/songsWS/pom.xml
+++ b/songsWS/pom.xml
@@ -15,6 +15,24 @@
   <dependencies>
   
   		<dependency>
+			<groupId>org.hibernate.javax.persistence</groupId>
+			<artifactId>hibernate-jpa-2.1-api</artifactId>
+			<version>1.0.0.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>5.2.12.Final</version>
+		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+		<dependency>
+		    <groupId>org.postgresql</groupId>
+		    <artifactId>postgresql</artifactId>
+		    <version>42.2.5</version>
+		</dependency>
+  
+  		<dependency>
             <groupId>javax.annotation</groupId>
             <artifactId>javax.annotation-api</artifactId>
             <version>1.3.2</version>
@@ -83,6 +101,21 @@
     <build>
 		<finalName>songsWS</finalName>
 		<plugins>
+		
+			 <plugin>
+	            <groupId>org.apache.tomcat.maven</groupId>
+	            <artifactId>tomcat7-maven-plugin</artifactId>
+	            <version>2.2</version>
+	            <configuration>
+	                <url>http://127.0.0.1:8080/manager/text</url>
+	                <path>/songsWS</path>
+	                <update>true</update>
+	                <username>tomcat</username>
+	                <password>tomcat</password>
+	            </configuration>
+	        </plugin>
+		
+		
 			<plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.0</version>
