--- a/songsWS/src/main/webapp/WEB-INF/web.xml
+++ b/songsWS/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,25 @@
-<!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
-
-<web-app>
-  <display-name>Archetype Created Web Application</display-name>
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee"
+    xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+    id="WebApp_ID" version="2.5">
+  <display-name>songsWS</display-name>
+  <servlet>
+    <servlet-name>jersey-servlet</servlet-name>
+    <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
+   
+     <!--  Anfragen weitergeleitet an Jersey Servlet, Klassen fuer Anfragen in services package -->
+    <init-param>
+      <param-name>jersey.config.server.provider.packages</param-name>
+      <param-value>de.htw.ai.kbe.services</param-value>
+    </init-param>
+    
+    
+    <load-on-startup>1</load-on-startup>
+  </servlet>
+  <!--  //http://localhost:8080/songsWS/rest -->
+  <servlet-mapping>
+    <servlet-name>jersey-servlet</servlet-name>
+    <url-pattern>/rest/*</url-pattern>
+  </servlet-mapping>
 </web-app>
