--- a/songsWS/pom.xml
+++ b/songsWS/pom.xml
@@ -60,6 +60,12 @@
             <version>${jersey.version}</version>
         </dependency>
         <dependency>
+		    <groupId>org.glassfish.jersey.test-framework</groupId>
+		    <artifactId>jersey-test-framework-core</artifactId>
+		    <version>2.27</version>
+		    <scope>test</scope>
+		</dependency>
+        <dependency>
             <groupId>org.glassfish.jersey.test-framework.providers</groupId>
             <artifactId>jersey-test-framework-provider-jdk-http</artifactId>
             <version>${jersey.version}</version>
@@ -96,6 +102,11 @@
 			<artifactId>hsqldb</artifactId>
 			<version>2.4.0</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+		    <groupId>com.googlecode.json-simple</groupId>
+		    <artifactId>json-simple</artifactId>
+		    <version>1.1.1</version>
 		</dependency>
   
 	    
